feat: added whitespace options
A password can now be created with whitespace at the beginning middle
and end.

Comprehensive list of changes:
* README.md:
	* corrected the directory structure in the main example.
	* Indicated what modifiers are disabled
	* fixed some markdown syntax
	* added whitespace option descriptions.
* demo files
	* updated the form to contain the new whitespace options
	* modified the script to allow the options to be disabled or
enabled.
	* updated the styling to (hopefully) display the whitespace properly
* Errors:
	* fixed spelling mistakes.
	* added new errors for whitespace.
* conformPassword:
	* added checks to ensure that a whitespace character exists between
the password.
	* takes a new flag parameter
* generateCharCode can now generate a whitespace character based on the
provided modifier.
* simplePass:
	* now calls the first and last character of the password separately
from the rest.
	* removed optional modifier attributes from default call.
	* no longer appended numbers to similar errors.
* I_passwordModifier:
	* added optional whitespace attributes.
* Test files
	* moved the call to run mocha from the script file to a script tag
in the `demo.html` file
	* added more tests:
		* checking for password length conformity
		* checking for whitespace conformity

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -12,6 +12,7 @@
     word-wrap: anywhere;
     width: 80%;
     margin-left: 0.5rem;
+    white-space: pre;
 }
 
 #generateButton{
@@ -31,4 +32,8 @@
 
 #passwordForm > * + *{
     margin-top: 0.5rem;
+}
+
+*[hidden]{
+    display: none;
 }
