--- a/demo/demo.css
+++ b/demo/demo.css
@@ -27,6 +27,9 @@
     border: 1px solid;
     border-radius: 0 0 10px 10px;
     box-shadow: 0 1px 5px;
+}
+
+#passwordForm > fieldset{
     display: flex;
     flex-flow: column;
 }
