feature: Added modifier pre-configs and batch password generation.
* Preconfigured modifiers can now be created an selected with a single
radio button. This allows for easier creation of commonly used password
setups.
* The demo can now create batches of passwords instead as well as
singles. This however is not yet possible from within the simplePass
function itself.
* Removed some unneeded HTML attributes from the demo.
* Fixed an error message related to the ```customRepeatingCharacters```
missing a replacement string.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site_src/main.scss
+++ b/site_src/main.scss
@@ -1,3 +1,5 @@
+@import "../node_modules/normalize.css/normalize.css";
+
 /**
  * Global Styles.
  */
@@ -17,6 +19,10 @@ html > body {
 
     header > nav{
         margin-left: auto;
+    }
+
+    main{
+        padding: 0.5rem;
     }
 
     /**
@@ -64,18 +70,47 @@ html > body {
         box-shadow: 0 -1px 5px;
     }
 
-    #displayPassword{
+    #passwordBox{
+
+        div{
+            display: block;
+            width: 100%;
+        }
+
+        > div:last-of-type{
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        > div:last-of-type{
+            > *{
+                width: 48%;
+                margin: 0.5rem auto;
+                height: 38px;
+            }
+
+            > label{
+                margin-left:  0;
+            }
+
+            > label input {
+                width: 100%;
+            }
+
+        }
+
+    }
+
+    #displayPassword,
+    .listedPassword{
         word-wrap: anywhere;
         width: 80%;
         margin-left: 0.5rem;
         white-space: pre;
         font-family: 'Liberation Mono';
         text-decoration: underline;
-    }
-
-    #generateButton{
-        width: 100%;
-        margin-top: 0.5rem;
+        overflow: scroll;
+        padding-bottom: 1rem;
     }
 
     #passwordForm{
@@ -88,7 +123,7 @@ html > body {
         flex-flow: column;
     }
 
-    #passwordForm{
+    #sp_form{
 
         > * + *{
             margin-top: 0.5rem;
@@ -98,6 +133,30 @@ html > body {
             display: flex;
             flex-flow: column;
         }
+
+        label{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+        }
+
+        label + label{
+            margin-top: 0.5rem;
+        }
+
+        label > input{
+            width: 100%;
+            max-width: 750px;
+        }
+
+        label > {
+            input[type='checkbox'],
+            input[type='radio']{
+                width: auto;
+                margin-left: 1rem;
+            }
+        }
+
 
     }
 
