refactor: changes to `text-rendering` and `text-underline-position`
These changes:
- Tell the browser to focus on making the text more legible over
rendering speed.
- Pushes the underline decoration to below the text baseline.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -163,8 +163,10 @@ html > body {
         white-space: pre;
         font-family: 'Liberation Mono';
         text-decoration: underline;
+        text-underline-position: under;
         overflow: scroll;
         padding-bottom: 1rem;
+        text-rendering: optimizeLegibility;
     }
 
     #passwordForm{
