feature: Added support for 'Greek and Coptic' characters
**Misc**
- Set ```font-kerning:none``` and ```font-variant-ligatures:
no-common-ligatures``` on the ```#displayPassword``` element. This
should help ensure clarity when reading the symbols.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -167,6 +167,8 @@ html > body {
         overflow: scroll;
         padding-bottom: 1rem;
         text-rendering: optimizeLegibility;
+        font-kerning: none;
+        font-variant-ligatures: no-common-ligatures;
     }
 
     #passwordForm{
