--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -155,20 +155,18 @@ html > body {
 
     }
 
-    #sp_displayPassword,
-    .listedPassword{
+    .sp_password{
         word-wrap: anywhere;
         width: 80%;
         margin-left: 0.5rem;
         white-space: pre;
         font-family: 'Liberation Mono';
-        text-decoration: underline;
-        text-underline-position: under;
-        overflow: scroll;
+        overflow: auto;
         padding-bottom: 1rem;
         text-rendering: optimizeLegibility;
         font-kerning: none;
         font-variant-ligatures: no-common-ligatures;
+        vertical-align: middle;
     }
 
     #sp_form{
