fix: `strengthChecker` will no longer clobber other inline styles.
- Adjusted the strength checkers colours to make them more distinct.
- Raised the strength checkers score for a *bad* score.

Signed-off-by: staticBanter <staticbanter@staticblogs.ca>

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -45,15 +45,15 @@ html > body {
         }
 
         &[data-score="modest"]{
-            color: yellowgreen;
+            color: orange;
         }
 
         &[data-score="ok"]{
-            color: limegreen;
+            color: gold;
         }
 
         &[data-score="good"]{
-            color: green;
+            color: yellowgreen;
         }
 
         &[data-score="excellent"]{
