feat: Ability to check various compression values on string.
Can now check the byte length for various compression formats on the
password as well as calculate the average compression score. The
currently supported compression formats are gzip, deflate, and
deflate-raw. If these options are set simplePass will return a Promise
instead.

* Fixed the binary string textarea not hiding the binary string.
* Fixed incorrect displaying of the binary string textarea.

Signed-off-by: staticBanter <76642517+staticBanter@users.noreply.github.com>

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -10,9 +10,8 @@ $margin-small: math.div($margin, 2);
 /**
 * Generics
 **/
-
 * {
-    [class^="simplePass_passwordTarget"] {
+    [class="simplePass_passwordTarget"] {
         display: inline-block;
         width: 100%;
         overflow: auto;
@@ -23,20 +22,10 @@ $margin-small: math.div($margin, 2);
         font-family: 'Courier New', Courier, 'Liberation Mono', monospace;
     }
 
-
-    textarea[data-simplepass-binary-string-target] {
-        resize: vertical;
-    }
-
-    [data-simplepass-binary-string-target] {
-        width: calc(100% - $margin);
-    }
-
-    [data-simplepass-binary-string-target][type="password"] {
+    [type="password"] {
         -webkit-text-security: disc;
     }
 }
-
 
 /**
 * Elements
@@ -77,7 +66,8 @@ label {
 
 label {
 
-    > input:not([type="checkbox"], [type="radio"]) {
+    > input:not([type="checkbox"], [type="radio"]),
+    > textarea {
         width: 100%;
     }
 
@@ -90,6 +80,11 @@ label {
         margin-top: $margin-small;
     }
 
+}
+
+textarea{
+    resize: vertical;
+    min-height: 4.5rem;
 }
 
 button {
